# CPP-Templates-The-Complete-Guide

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/Chapter1/: main.cc
src/Chapter10/: main.cc  note.md  trans1.cc  trans2.cc
src/Chapter11/: main.cc  note.md
src/Chapter13/: note.md
src/Chapter18/: main.cc  note.md
src/Chapter19/: acc_sum.h  accumulation_traits.h  main.cc  named_template_args.h  note.md  policy.h
src/Chapter19/SFINAE/: SFINAE.h  add_type.h  detect.h  is_convertible.h  main.cc
src/Chapter19/TypeFunction/: element_type.h  other_technique.h  predicate_type.h  result_type_trait.h
src/Chapter2/: main.cc
src/Chapter20/: main.cc  note.md
src/Chapter20/src/: class_advance.h  dictionary.h  enable_if.h  min.h  tag.h
src/Chapter21/: main.cc  note.md
src/Chapter22/: main.cc  note.md
src/Chapter22/function_ptr/: function_bridge.h  function_ptr.h
src/Chapter23/: main.cc  note.md
src/Chapter24/: const_typelist.h  main.cc  non_type.h  note.md  type_list.h
src/Chapter25/: main.cc  note.md  tuple.h
src/Chapter26/: note.md  varient.h
src/Chapter27/: array.h  main.cc  note.md  props.h  sarray.h
src/Chapter28/: main.cc  note.md  tracer.h
src/Chapter3/: main.cc
src/Chapter4/: main.cc
src/Chapter5/: main.cc
src/Chapter6/: main.cc
src/Chapter7/: main.cc
src/Chapter8/: main.cc
src/Chapter9/: impl.cc  impl2.cc  main.cc  main.h
src/Common/: stack.cc
src/SomethingOther/: runtime_polymorphism.cc  variant.cc
